Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

27-Aug-2012 Jean-Marie Simonet
 # [#28376] Remove unnecessary files from com_media frontend. Thanks Michael

26-Aug-2012 Jean-Marie Simonet
 # [#28950] Code quality for mod_stats_admin, translated DB drivers. Thanks Michael
 # [#28962] Added colors to main icons in admin isis. Thanks Peter.
 # [#28984] HRs in default layouts will change people's sites and are not semantic. Thanks Elin
 # [#28853] Template fails to copy. Thanks Mark
 # [#28672] Fix PHP Strict errors with Smart Search auto-completion. Thanks Michael.
 # [#28985] JFile class not loaded when use cache handler != file. Thanks Julio.
 ^ xml version changes to 3.0

24-Aug-2012 Jean-Marie Simonet
 # [#28968] Missing JFolder class imports in CMS. Thanks Mark
 # [#28797] Code Cleanup - Smart Search. Thanks Michael
 # [#28449] captcha cause fatal error when the "captcha" field is not present in "configuration.php" after an upgrade. Thanks Elin.
 # [#28987] JToolbarButtonHelp doesn't work. Thanks Rouven

23-Aug-2012 Mark Dexter
 # [#28948] Improvements for com_media Bootstrapped layouts. Thanks Michael.
 # [#28965] Wrong default menu for new menu items
 # [#28974] Refactor newsfeeds to use JFeed. Thanks Elin.
 # [#28976] Fatal Error when click Article button during front-end editing

22-Aug-2012 Mark Dexter
 # [#28967] Save & Close of Menu Item results in Fatal Error

21-Aug-2012 Jean-Marie Simonet
 # [#28954] *Administrator templates positions untranslated when editing Module position

21-Aug-2012 Rouven Weßling
 ^ Merge latest platform (bf746b2389fbea9c0fa48ea015320c18beb8d0f3)
 ^ Remove use of the deprecated JProfiler::getMemory().

20-Aug-2012 Rouven Weßling
 + Add setup for unit testing. Thanks Michael.

20-Aug-2012 Jean-Marie Simonet