@@ -61,6 +61,14 @@
 			<option value="1">JSHOW</option>
 			<option value="0">JHIDE</option>
 		</field>
+		<field name="show_advanced_tips"
+			type="radio"
+			default="1"
+			label="COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_LABEL"
+			description="COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_DESCRIPTION">
+			<option value="1">JSHOW</option>
+			<option value="0">JHIDE</option>
+		</field>
 		<field
 			name="expand_advanced"
 			type="radio"
