@@ -46,6 +46,8 @@ COM_FINDER_CONFIG_SORT_OPTION_RELEVANCE="Relevance"
 COM_FINDER_CONFIG_SORT_OPTION_START_DATE="Date"
 COM_FINDER_CONFIG_SHOW_ADVANCED_DESCRIPTION="Toggle whether users should be able to see advanced search options."
 COM_FINDER_CONFIG_SHOW_ADVANCED_LABEL="Advanced Search"
+COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_DESCRIPTION="Toggle whether users should be able to see advanced search tips."
+COM_FINDER_CONFIG_SHOW_ADVANCED_TIPS_LABEL="Advanced Tips"
 COM_FINDER_CONFIG_SHOW_AUTOSUGGEST_DESCRIPTION="Toggle whether automatic search suggestions should be displayed."
 COM_FINDER_CONFIG_SHOW_AUTOSUGGEST_LABEL="Search Suggestions"
 COM_FINDER_CONFIG_SHOW_DATE_FILTERS_DESCRIPTION="Show the start and end date filters in the advanced search."
